syntax = "proto3";

option java_package = "com.contractservice.grpc";

service ContractService
{

  rpc GrpcGetClient(UUID) returns (Client);
  rpc GrpcGetAllClients(Empty) returns (Clients);
  rpc GrpcAddClient(CreateClient) returns(Empty);
  rpc GrpcDeleteClient(UUID) returns(Empty);
  rpc GrpcUpdateClient(UpdateClient) returns(Client);

  rpc GrpcGetContract(UUID) returns (Contract);
  rpc GrpcGetAllContracts(Empty) returns (Contracts);
  rpc GrpcAddContract(createContract) returns(Empty);
  rpc GrpcAddParkingPlace(changeClientPlace) returns (Empty);
  rpc GrpcRemoveParkingPlace(changeClientPlace) returns (Empty);
  rpc GrpcAddClientCar(changeClientCar) returns(Empty);
  rpc GrpcRemoveClientCar(changeClientCar) returns (Empty);
  rpc GrpcDeleteContract(UUID) returns(Empty);

  rpc GrpcGetParkingPlace(Id) returns (ParkingPlace);
  rpc GrpcGetAllParkingPlaces(Empty) returns (ParkingPlaces);


}

message UUID {
  string value = 1;
}
message Id
{
  int32 value =1;
}
message Clients
{
  repeated Client clients =1;
}
message CreateClient
{
  string name=1;
}
message UpdateClient
{
  string id=1;
  double month_pay=2;
}
message Client{
string id = 1;
string  name =2;
double monthPay =3;
}

message Contract
{
  string id =1;
  string client_id =2 ;
  repeated string reqisteredCars =3;
}
message Contracts
{
  repeated Contract contracts =1 ;
}
message createContract
{
  string clientId =1 ;
  string carName =2;
}
message changeClientCar
{
  string id =1 ;
  string carName=2;
}
message changeClientPlace
{
  string id =1;
  int32 parkingPlace=2;
}

message ParkingPlace
{
  int32 id=1;
  bool isOccupied =2;
  string contractId=3;

}

message ParkingPlaces
{
  repeated ParkingPlace parkingPlaces =1;
}
message  Empty{}